# trafiklab-rs

./: Cargo.toml  README.md  flake.nix
examples/: resrobot_route.rs
src/: lib.rs
src/resrobot/: mod.rs
src/resrobot/route/: mod.rs  request.rs  response.rs  response_raw.rs
tests/: main_tests.rs  resrobot_tests.rs  test.rs
tests/resrobot/: mod.rs  route_response.json  route_response_real_1.json  route_response_real_2.json  route_response_real_3.json  route_test.rs
