[package]
version = "0.0.1"
name = "trafiklab"
description = "Unofficial Rust SDK for Trafiklab APIs"
authors = ["Vincent Brodin <vincent.brodin21@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/VincentBrodin/trafiklab-rs"
edition = "2024"
keywords = ["trafiklab", "SDK", "SL", "ResRobot", "GTFS"]

[features]
stress = []
resrobot = []

[dependencies]
chrono = "0.4"
reqwest = { version ="0.12", features=["json"] }
serde = "1.0"
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.48", features=["full"] }
url = "2.5"

[dev-dependencies]
dotenv = "0.15"
